# stdexec_example

./: CMakeLists.txt  main.cpp  module.cppm
